--- a/RadzenBlazorTester/Shared/NavMenu.razor
+++ b/RadzenBlazorTester/Shared/NavMenu.razor
@@ -32,6 +32,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Test Accordion
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="ArcGaugeTester">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Test ArcGauge
+            </NavLink>
+        </li>
     </ul>
 </div>
 
