--- a/RadzenBlazorTester/Shared/NavMenu.razor
+++ b/RadzenBlazorTester/Shared/NavMenu.razor
@@ -37,6 +37,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Test ArcGauge
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="autocompletetester">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Test AutoComplete
+            </NavLink>
+        </li>
     </ul>
 </div>
 
