--- a/RadzenBlazorTester/Shared/NavMenu.razor
+++ b/RadzenBlazorTester/Shared/NavMenu.razor
@@ -42,6 +42,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Test AutoComplete
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="buttontester">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Test Buttons
+            </NavLink>
+        </li>
     </ul>
 </div>
 
