--- a/RadzenBlazorTester/Shared/NavMenu.razor
+++ b/RadzenBlazorTester/Shared/NavMenu.razor
@@ -47,6 +47,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Test Buttons
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="ChartTester">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Test Chart
+            </NavLink>
+        </li>
     </ul>
 </div>
 
