--- a/RadzenBlazorTester/Shared/NavMenu.razor
+++ b/RadzenBlazorTester/Shared/NavMenu.razor
@@ -52,6 +52,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Test Chart
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="checkboxtester">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Test Checkbox
+            </NavLink>
+        </li>
     </ul>
 </div>
 
