--- a/RadzenBlazorTester/Shared/NavMenu.razor
+++ b/RadzenBlazorTester/Shared/NavMenu.razor
@@ -57,6 +57,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Test Checkbox
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="DataGridTester">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> DataGrid Tester
+            </NavLink>
+        </li>
     </ul>
 </div>
 
