--- a/RadzenBlazorTester/Shared/NavMenu.razor
+++ b/RadzenBlazorTester/Shared/NavMenu.razor
@@ -62,6 +62,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> DataGrid Tester
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="DataListTester">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> DataList Tester
+            </NavLink>
+        </li>
     </ul>
 </div>
 
